@@ -60,6 +60,7 @@
 <a href="#gui">GUI</a>
 <ul>
     <a href="#gui-pathbar">Path Bar</a><br>
+    <a href="#gui-find">Find-As-You-Type Search </a><br>
 </ul>
 <a href="#devices">Devices</a>
 <ul>
@@ -172,7 +173,7 @@
     <li><b>Feature-Rich</b> - <i>Subtle power features to improve efficiency and abilities</i><br>
     <ul>
 	<li>Extensive file management features to move, copy, link, plus configurable drag-n-drop and unique clipboard functions
-	<li>Find-As-You-Type search to quickly locate a file with a case-sensitive/insensitive search of filenames - just type a few letters, or use a wildcard pattern
+	<li>Find-As-You-Type search to quickly locate a file with a case-sensitive/insensitive search of filenames - just type a few letters, or use a wildcard pattern <a href="#gui-find">*</a>
 	<li>System management features to safely perform convenient commands as root: edit, copy, move, and delete files and folders as root, change permissions, and create links, or run a root instance
 	<li>In-program archive creation and extraction (or use an external app)
 	<li>File search - flexibly search for file names, sizes, content, etc. with no daemon required
@@ -381,7 +382,7 @@ The <a href="https://github.com/IgnorantGuru/spacefm/wiki">SpaceFM Wiki</a> cont
 <tr>
 <td valign="top"><b>Arch Linux</b></td>
 <td>
-	Arch Linux's [community] repository includes <b>spacefm</b> (<a href="http://www.archlinux.org/packages/community/i686/spacefm/">i686</a> &amp; <a href="http://www.archlinux.org/packages/community/x86_64/spacefm/">amd64</a>), and the <a href="http://aur.archlinux.org/packages.php?ID=58247">spacefm-git AUR package</a> provides the 'next' branch as a work in progress.
+	Arch Linux's [community] repository includes <b>spacefm</b> (GTK3, <a href="http://www.archlinux.org/packages/community/i686/spacefm/">i686</a> &amp; <a href="http://www.archlinux.org/packages/community/x86_64/spacefm/">amd64</a>), and the AUR provides <a href="https://aur.archlinux.org/packages/spacefm-gtk2/">spacefm-gtk2</a> and <a href="https://aur.archlinux.org/packages/spacefm-git/">spacefm-git</a> (next branch).
 </td>
 </tr>
 
@@ -1062,6 +1063,7 @@ Then open ~/.local/share/applications/spacefm.desktop in your editor and set the
     <li>GUI
     <ul>
         <li>Path Bar
+        <li><a href="#gui-find">Find-As-You-Type Search </a>
     </ul>
     <li><a href="#devices">Devices</a>
     <li><a href="#tasks">Tasks</a>
@@ -1236,6 +1238,8 @@ When you press Enter, all filenames in the file list ending in ".avi" will be se
 
 If your pattern contains any uppercase characters, the matching will be case sensitive.  For additional wildcard characters and pattern specifics, see <a href="http://pubs.opengroup.org/onlinepubs/009695399/utilities/xcu_chap02.html#tag_02_13_01">IEEE Pattern Matching Notation</a>.
 
+<p>See also: <a href="#gui-find">Find-As-You-Type Search</a>.
+
 <!-- # Font -->
 <p><a name="gui-pathbar-font"/><a href="#gui-pathbar-font"><b>Font</b></a><br>
 The font used in the Path Bar can be customized (this is a per panel setting).  Right-click on the Path Bar and select Font.
@@ -1247,9 +1251,61 @@ Additional functions are planned for SpaceFM's Path Bar - check this manual for 
 
 
 
-
-
 <!-- @end gui-pathbar-->
+<br><br></td></tr>
+
+
+<tr>
+<td width="20%" valign="top">
+<a href="#toc">Contents</a>
+<ul>
+    <li><a href="#introduction">Introduction</a>
+    <li><a href="#installation">Installation</a>
+    <li><a href="#invocation">Invocation</a>
+    <li><a href="#quickstart">Quick Start</a>
+    <li>GUI
+    <ul>
+        <li><a href="#gui-pathbar">Path Bar</a>
+        <li>Find-As-You-Type Search 
+    </ul>
+    <li><a href="#devices">Devices</a>
+    <li><a href="#tasks">Tasks</a>
+    <li><a href="#designmode">Design Mode</a>
+    <li><a href="#plugins">Plugins</a>
+    <li><a href="#dialog">Dialog</a>
+    <li><a href="#sockets">Sockets</a>
+    <li><a href="#programfiles">Program Files</a>
+</ul>
+</td>
+<td valign="top">
+<a name="gui-find"/><a href="#gui-find"><font size=+2>Find-As-You-Type Search </font></a>
+<!-- @GUI @Find-As-You-Type Search #find -->
+
+<p>When the file list has focus (click on the file list), pressing an alphanumeric key will open the Find-As-You-Type search box in the lower right corner of the file list, allowing you to quickly jump to a file.  By default, SpaceFM conducts a case insensitive substring search.  This means if you type any part of a filename, the cursor will select the first filename which <i>contains</i> that string of characters.  Press down or up arrow, or scroll wheel up/down, to go to the next or previous matched filename.
+
+<p>In addition, Find-As-You-Type Search supports the following modes:
+
+<ul>
+    <li><b>Pattern Mode:</b>  If the search key contains at least one asterisk (*) or question mark (?), a glob substring search is now used. (An asterisk is automatically added before and after your key before testing.)  For pattern usage see <a href="http://pubs.opengroup.org/onlinepubs/009695399/utilities/xcu_chap02.html#tag_02_13_01">IEEE Pattern Matching Notation</a>.<br><br>
+
+    <li><b>Non-Pattern Mode:</b>  If your key does not contain an asterisk (*) or question mark (?), a normal substring search is performed, with the following new special characters recognized:<br><br>
+    <ul>
+        <li>If the search key begins with a caret (^), the search will match names <i>beginning</i> with your key.  
+        <li>If your key ends with a dollar sign ($), the search will match names <i>ending</i> with your key.
+        <li>You can use both a caret and dollar sign to constrain both.  (Other regex characters and wildcards are not supported in this mode.)
+    </ul><br>
+    <li>Anytime you use an uppercase letter anywhere in your search key, the search mode becomes <b>case sensitive</b>.<br><br>
+
+    <li>Regardless of mode, you can press down or up arrow, or scroll wheel down/up, to go to the <b>next or previous matched filename</b>.<br><br>
+</ul>
+
+See also: <a href="#gui-pathbar-pattern">Select By Pattern</a>.
+
+
+
+
+
+<!-- @end gui-find-->
 <br><br></td></tr>
 
 
@@ -2600,6 +2656,8 @@ The Name item allows you to change a menu item's name as it appears in the menu.
 The Key item allows you to bind any shortcut key to the current menu item, and to change or unset an existing shortcut key.  When you select Key, a dialog will open asking you to press your key combination (for example Ctrl+G), and the keycode will be displayed.  If the key combination is already in use, you will be told what function the key is currently assigned to and be given the option to replace the current assignment.  Once you have pressed the desired key combination, click the Set button.  Or, to unset the current key assignment, leaving no key assigned to this menu item, click the Unset button.  The Key option can be used on built-in and custom commands, but cannot be used on a submenu.
 
 <p>After you have set a key combination, when you reopen the menu the new key shortcut will be displayed in the menu.
+
+<p><b>TIP: To use only the keyboard in the Set Key dialog</b>, press a key combination and then press Enter to click the Set button.  Or, to click Unset, press the Escape key twice.  To cancel, simply close the dialog (usually Alt-F4).
 
 <p>You can also change the key for a menu item using a <a href="#designmode-shortcuts">design mode shortcut</a> instead of the Design Menu.  Highlight the menu item and press Ctrl+K, <b>or</b> use the mouse shortcut Ctrl + Middle-Click.
 
@@ -6616,7 +6674,7 @@ Additional MIME types provided by libmimetype, adding globs for some missing but
 
 <p>DISCLAIMER:  While the authors, copyright holders, and maintainers of this software endeavour to keep all content up to date and valuable, we make no representations or warranties of any kind, express or implied, about the completeness, accuracy, reliability, suitability or availability with respect to the software or the information, communications, products, services, or related graphics for any purpose. Any reliance you place on such content is therefore strictly AT YOUR OWN RISK.<br>
 <br>
-<p>Updated 2013-01-14&nbsp;&nbsp;(SpaceFM version 0.8.5)
+<p>Updated 2013-01-31&nbsp;&nbsp;(SpaceFM version 0.8.5+)
 <br><br>
 </center>
 </td></tr></table>
